# element-fluent-ui

./: .clang-format  .editorconfig  .gitignore  .markdownlint.json  .prettierrc.json  ACCESSIBILITY_FIX_SUMMARY.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  NEW_COMPONENTS_SUMMARY.md  README.md  TIMELINE_IMPLEMENTATION_SUMMARY.md  conanfile.py  package-lock.json  package.json  test_accessibility_fix.cpp  test_coverage_analysis.md  test_examples.ps1  test_std.cpp  vcpkg.json
.augment/rules/: BuildAll.md  UpdateComponent.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml
cmake/: FluentQt.pc.in  FluentQtConfig.cmake.in
docs/: ACCESSIBILITY_STARTUP_FIX.md  ADVANCED_ANIMATION_OPTIMIZATION_SUMMARY.md  ANIMATION_OPTIMIZATION_SUMMARY.md  ANIMATION_SYSTEM_GUIDE.md  API_DOCUMENTATION_ENHANCED.md  API_REFERENCE.md  BUILD_GUIDE.md  COMPONENT_GUIDE.md  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CROSS_PLATFORM.md  CROSS_PLATFORM_PRESETS_SUMMARY.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  ENHANCEMENT_SUMMARY.md  ElaWidgetToolsOptimizations.md  FluentAccordion_Optimization_Summary.md  FluentSidebar_Optimization_Summary.md  FluentTreeView_Optimization_Report.md  MIGRATION_GUIDE.md  SIDEBAR_COMPONENT_GUIDE.md  TESTING_GUIDE.md  TESTING_IMPROVEMENTS_SUMMARY.md  USAGE_GUIDELINES.md  index.md
docs/.vitepress/: config.mjs  config.ts
docs/animation/: FluentDesignAnimations.md
docs/compliance/: FluentDesignSystemCompliance.md
docs/components/: COMPONENT_INDEX.md  DOCUMENTATION_TEMPLATE.md  ENHANCEMENT_SUMMARY.md  FluentAccordion.md  FluentAutoCarousel_Enhanced.md  FluentAvatar.md  FluentBadge.md  FluentBreadcrumb.md  (+35 more)
examples/: AccessibilityEnhancementExample.cpp  AccessibilityFix.h  AccessibilityPerformanceExample.cpp  AccessibilityStartupTest.cpp  AccessibilityThemingExample.cpp  AdditionalFormControlsExample.cpp  AdvancedAnimationExample.cpp  AdvancedAnimationShowcase.cpp  AdvancedPerformanceMonitoringExample.cpp  AdvancedThemingExample.cpp  CMakeLists.txt  COMPLETE_GALLERY_SUMMARY.md  CarouselShowcaseExample.cpp  ComprehensiveDemo.cpp  ContextMenuInteractionExample.cpp  DataVisualizationExample.cpp  DatePickerExample.cpp  ElaWidgetToolsOptimizationDemo.cpp  EnhancedFluentAutoCarouselExample.cpp  EnhancedPerformanceExample.cpp  EnhancedSidebarExample.cpp  FeedbackComponentsExample.cpp  FluentAccessibilityHelper.cpp  FluentAccessibilityHelper.h  FluentAnimationExample.cpp  FluentAnimationShowcase.cpp  FluentGallery.cpp  FluentGalleryComplete.cpp  FluentGalleryFixed.cpp  FluentGallerySimple.cpp  FluentTooltip_Enhanced_Usage.cpp  FluentVisualFeedbackManager.cpp  FluentVisualFeedbackManager.h  FormComponentsExample.cpp  InternationalizationExample.cpp  LayoutNavigationExample.cpp  MinimalTest.cpp  NavigationLayoutExample.cpp  NotificationExample.cpp  OptimizedAnimationExample.cpp  (+20 more)
examples/DesignTokens/: FluentDesignTokenExample.cpp
examples/ToastAndSelectDemo/: CMakeLists.txt  main.cpp
examples/accessibility/: README.md
examples/accessibility/forms/accessible-form-builder/: main.cpp
examples/integration/: README.md
examples/interactive/: README.md
examples/interactive/business/customer-management/: main.cpp
examples/theming/: README.md
scripts/: build.ps1  build.sh  test-cross-platform-presets.ps1  validate-presets.ps1  validate-presets.sh
test_package/: CMakeLists.txt  conanfile.py  test_fluentqt.cpp
tests/: AnimationSystemTests.cpp  CMakeLists.txt  DataTableTest.cpp  ElaWidgetToolsOptimizationTest.cpp  FilePickerTest.cpp  FluentAnimationPerformanceTest.cpp  FluentAnimationValidation.cpp  FluentAnimatorTest.cpp  FluentAnimatorTestFixed.cpp  FluentCarouselCoalesceTest.cpp  FluentCarouselStylingTest.cpp  FluentCarouselTest.cpp  FluentCarouselVariantsTest.cpp  FluentComponentValidationProgram.cpp  FluentComponentValidator.cpp  FluentComponentValidator.h  FluentFormComponentsTest.cpp  FluentThemeTest.cpp  FluentTimelineTest.cpp  README.md  SearchBoxTest.cpp  SidebarComponentTests.cpp  SimpleFluentValidator.cpp  SpecializedComponentValidators.cpp  comprehensive_animation_test_suite.py  run_animation_tests.py  run_enhanced_carousel_tests.py  run_tests.py  test_config.h.in
tests/Accessibility/: CMakeLists.txt  FluentAccessibilityTest.cpp  FluentAccessibleTest.cpp
tests/Compliance/: FluentDesignSystemComplianceTest.cpp
tests/Components/: FluentAccordionTest.cpp  FluentAutoCarouselAPITest.cpp  FluentAutoCarouselEnhancedTest.cpp  FluentAutoCarouselTest.cpp  FluentAvatarTest.cpp  FluentBadgeTest.cpp  FluentBasicCarouselTest.cpp  FluentBreadcrumbTest.cpp  FluentButtonTest.cpp  FluentCalendarTest.cpp  FluentCardTest.cpp  FluentCarouselTest.cpp  FluentChartViewTest.cpp  FluentCheckBoxTest.cpp  FluentCheckBoxTestSimple.cpp  FluentColorPickerTest.cpp  FluentComboBoxTest.cpp  FluentContentDialogTest.cpp  FluentContextMenuTest.cpp  FluentDataTableTest.cpp  FluentDatePickerTest.cpp  FluentDropdownTest.cpp  FluentEnhancedScrollBarTest.cpp  FluentFilePickerTest.cpp  FluentGridTest.cpp  FluentImageViewTest.cpp  FluentImageViewTestSimple.cpp  FluentIndicatorCarouselTest.cpp  FluentLoadingIndicatorTest.cpp  FluentNavigationViewTest.cpp  FluentNotificationTest.cpp  FluentPasswordBoxTest.cpp  FluentPivotTest.cpp  FluentProgressBarTest.cpp  FluentProgressRingTest.cpp  FluentRadioButtonTest.cpp  FluentRatingControlTest.cpp  FluentResizableTest.cpp  FluentScrollAreaTest.cpp  FluentSearchBoxTest.cpp  (+11 more)
tests/Core/: FluentComponentTest.cpp  FluentPerformanceTest.cpp
tests/CrossPlatform/: FluentCrossPlatformTest.cpp
tests/Integration/: FluentIntegrationTest.cpp
tests/Performance/: FluentAnimationPerformanceTest.cpp  FluentButtonPaintOptimizationTest.cpp  FluentMemoryManagementTest.cpp  FluentPerformanceBenchmark.cpp  FluentTreeViewVirtualizationTest.cpp
tests/Styling/: FluentDesignTokenSystemTest.cpp
tests/Visual/: FluentVisualRegressionTest.cpp
tests/ci/: github_actions.yml
tests/data/: README.md
(+224 files in other folders)
